fix: update code syntax highlighting

--- a/_posts/2010-12-28-bootstrapping-image-based-bookmarklets.html
+++ b/_posts/2010-12-28-bootstrapping-image-based-bookmarklets.html
@@ -44,7 +44,7 @@ For the purposes of this bookmarklet, I needed to write a piece of code that wou
 
 Here is a formatted example of what my a href tag JavaScript looks like:
 
-<pre><code class="language-javascript">
+{% highlight javascript %}
 //
 // &lt;a&gt; tag href javascript
 //
@@ -65,71 +65,64 @@ javascript:(function() {
 			main();
 		}
 	})();
-</code></pre>
+{% endhighlight %}
 
 After tidying up our script, and adding the surrounding tag, here is a final rendered output of our code, I came up with the following:
 
-<pre><code class="language-markup">
-&lt;!--
-    &lt;a&gt; tag example
---&gt;
-&lt;a href=&quot;javascript:(function(){if((document.contentType&amp;&amp;document.contentType.indexOf('image/')&gt;-1)||/.png$/.test(location.href)||/.jpg$/.test(location.href)||/.jpeg$/.test(location.href)||/.gif$/.test(location.href)){location.href='http://jbeckwith.com/bookmarklet/';}else if(!window.main){document.body.appendChild(document.createElement('script')).src='http://jbeckwith.com/my-bookmarklet.js';}else{main();}})();&quot;&gt;It's a bookmarklet!&lt;/a&gt;
-</code></pre>
+{% highlight html %}
+<!--
+	<a> tag example
+-->
+<a href="javascript:(function(){if((document.contentType&&document.contentType.indexOf('image/')>-1)||/.png$/.test(location.href)||/.jpg$/.test(location.href)||/.jpeg$/.test(location.href)||/.gif$/.test(location.href)){location.href='http://jbeckwith.com/bookmarklet/';}else if(!window.main){document.body.appendChild(document.createElement('script')).src='http://jbeckwith.com/my-bookmarklet.js';}else{main();}})();">It's a bookmarklet!</a>
+{% endhighlight %}
 
 <h3>Loading jQuery and jQueryUI</h3>
 Now that the bootstrapper is created, I am going to focus the rest of the article on the external JavaScript file that contains the meat of the code.  With the script I wrote, I needed to use a good deal of visual effects.  I am already comfortable with <a href="http://jquery.com/" target="_blank">JQuery</a>, so I chose to use it as my JavaScript framework:
 
-<pre><code class="language-javascript">
-//
+{% highlight javascript %}
 // create javascript libraries required for main
-//
 if (typeof jQuery == 'undefined') {
 	// include jquery
 	var jQ = document.createElement('script');
 	jQ.type = 'text/javascript';
 	jQ.onload=getDependencies;
-	jQ.onreadystatechange=function() { 
-		if(this.readyState=='loaded' || this.readyState=='complete') { 
-			getDependencies(); 
+	jQ.onreadystatechange=function() {
+		if(this.readyState=='loaded' || this.readyState=='complete') {
+			getDependencies();
 		} // end if
 	};
 	jQ.src = 'http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js';
 	document.body.appendChild(jQ);
-} // end if 
+} // end if
 else {
 	getDependencies();
 } // end else
 
-</code></pre>
+{% endhighlight %}
 
-If you look at the example in the Smashing Magazine article, you will notice a couple of differences.  We need to add an event for onreadystatechange to handle Internet Explorer.  I found that IE inconsistently set the readyState of the script object to 'loaded' or 'complete' in various parts of the DOM, so as a rule I check for both.  If you don't make this change, IE will never notify the script that jQuery is finished loading.  
+If you look at the example in the Smashing Magazine article, you will notice a couple of differences.  We need to add an event for onreadystatechange to handle Internet Explorer.  I found that IE inconsistently set the readyState of the script object to 'loaded' or 'complete' in various parts of the DOM, so as a rule I check for both.  If you don't make this change, IE will never notify the script that jQuery is finished loading.
 
 Secondly, I have added the getDependencies() method to manage loading required scripts (in addition to jQuery).  Since I am depending heavily on a few jQuery UI components, I needed to load both an external JavaScript file and an external CSS file:
 
-<pre><code class="language-javascript">
-//
-// getDependencies
-//
+{% highlight javascript %}
 function getDependencies() {
-	
 	// make sure jqueryUI is loaded
 	if (!jQuery.ui) {
-	
 		// get the link css tag
 		var jQCSS = document.createElement('link');
 		jQCSS.type = 'text/css';
 		jQCSS.rel= 'stylesheet';
 		jQCSS.href = 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css';
 		document.body.appendChild(jQCSS);
-		
+
 		// grab jquery ui
 		var jQUI = document.createElement('script');
 		jQUI.type = 'text/javascript';
 		jQUI.src = 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js';
 		jQUI.onload=getDependencies;
 		jQUI.onreadystatechange=function() {
-			if(this.readyState=='loaded' || this.readyState=='complete') { 
-				getDependencies(); 
+			if(this.readyState=='loaded' || this.readyState=='complete') {
+				getDependencies();
 			} // end if
 		};
 		document.body.appendChild(jQUI);
@@ -138,14 +131,14 @@ function getDependencies() {
 		main();
 	} // end else
 } // end getDependencies function
-</code></pre>
+{% endhighlight %}
 
-In this case, I'm really only waiting on jQuery and jQuery UI to load.  If there were more dependent scripts, I would likely create an array of scripts that need to be loaded, and check all of their completion every turn through the getDepenencies method.  
+In this case, I'm really only waiting on jQuery and jQuery UI to load.  If there were more dependent scripts, I would likely create an array of scripts that need to be loaded, and check all of their completion every turn through the getDepenencies method.
 
 <h3>Embedding Styles</h3>
 With the supporting code written, we're now ready to work on our main method.  This is where bookmarklets really are different based on your task.  In my case, I'm creating a visual element on the page, complete with styles to match the target site.  This works pretty much as expected, with a single caveat:  any style definitions you create must be at the very bottom of your appended script.  Internet Explorer has a nasty habit of inconsistently handling styles and scripts when appended to the DOM.  For some reason beyond my understanding, appended style definitions, whether via script or ajax calls, only work if they are at the very bottom of the appended code.  This is fantastically fun to figure out on your own, so hopefully I've saved you some trouble.
 
-<pre><code class="language-javascript">
+{% highlight javascript %}
 //
 // main
 //
@@ -153,7 +146,7 @@ function main() {
 	// only do this the first time the bar is loaded on the page
 	if ($(&quot;#myBar&quot;).length == 0) {
 		// append the styles and bar
-		
+
 		var barHtml =	&quot;&lt;div id='myBar'&gt;\
 							&lt;div id='myBar-main' class='dragOff'&gt;\
 								&lt;span id='myBar-thumbs'&gt;&lt;/span&gt;\
@@ -183,14 +176,14 @@ function main() {
 								.dragHelper {z-index: 99999; border: 1px solid #000000;}\
 							&lt;/style&gt;&quot;;
 		$(&quot;body&quot;).append(barHtml);
-</code></pre>
+{% endhighlight %}
 
-This code simply creates a formatted div and adds it to the top of the page.  
+This code simply creates a formatted div and adds it to the top of the page.
 
 <h3>Cleaning up the mess</h3>
 If you look at the generated HTML above, you'll notice that I include a cancel link.  I like to give the user the option to cancel out of using the current bookmarklet, and even relaunch the bookmarklet without issue.  So when you're done, make sure to test closing and re-launching the code.  I suggest keeping all of your elements on the page, and simply hiding them from the user:
 
-<pre><code class="language-javascript">
+{% highlight javascript %}
 		//
 		// myBar close evnet
 		//
@@ -207,6 +200,6 @@ If you look at the generated HTML above, you'll notice that I include a cancel l
 			// reset the text
 			$(&quot;#myBar-text&quot;).html(&quot;drag images to the mybar&quot;);
 		});
-</code></pre>
+{% endhighlight %}
 
 And for now, that's it.  For the source to this project, visit my <a href="https://github.com/JustinBeckwith/Chogger-Bookmarklet" target="_blank">GitHub</a>.
