fix: remove addthis and use own social icons

--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@ Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, wh
 
 <h3>Find me online</h3>
 <h4>Twitter:</h4>
-<a href="http://twitter.com/justinbeckwith" target="_blank">http://twitter.com/justinbeckwith</a>
+<a href="https://twitter.com/justinbeckwith" target="_blank">https://twitter.com/justinbeckwith</a>
 
 <h4>LinkedIn:</h4>
-<a href="http://www.linkedin.com/in/beckwith" target="_blank">http://www.linkedin.com/in/beckwith</a>
+<a href="https://www.linkedin.com/in/beckwith" target="_blank">https://www.linkedin.com/in/beckwith</a>
 
 <h4>StackOverflow:</h4>
-<a href="http://stackoverflow.com/users/178236/justin-beckwith" target="_blank">http://stackoverflow.com/users/178236/justin-beckwith</a>
+<a href="https://stackoverflow.com/users/178236/justin-beckwith" target="_blank">https://stackoverflow.com/users/178236/justin-beckwith</a>
 
 <h4>GitHub:</h4>
 <a href="https://github.com/JustinBeckwith/" target="_blank">https://github.com/JustinBeckwith/</a>
@@ -50,7 +50,7 @@ Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, wh
   </tr>
 	<tr>
     <td>Øredev 2016</td>
-    <td><a href="http://oredev.org/2016/sessions/get-microservicey-with-node-js-kubernetes-and-grpc">Get microservicey with Node.js, Kubernetes and gRPC</a></td>
+    <td><a href="https://oredev.org/2016/sessions/get-microservicey-with-node-js-kubernetes-and-grpc">Get microservicey with Node.js, Kubernetes and gRPC</a></td>
   </tr>
 	<tr>
     <td>Node Summit 2016</td>
@@ -70,39 +70,39 @@ Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, wh
   </tr>
   <tr>
 		<td>Øredev 2014</td>
-		<td><a href="http://vimeo.com/111289052">es6: Getting ready for JavaScript vNext</a></td>
+		<td><a href="https://vimeo.com/111289052">es6: Getting ready for JavaScript vNext</a></td>
 	</tr>
 	<tr>
 		<td>Øredev 2014</td>
-		<td><a href="http://vimeo.com/111004374">Building web applications with ASP.NET vNext</a></td>
+		<td><a href="https://vimeo.com/111004374">Building web applications with ASP.NET vNext</a></td>
 	</tr>
 	<tr>
 		<td>QCon NYC 2013</td>
-		<td><a href="http://www.infoq.com/presentations/continuous-delivery-azure">Continuous Delivery with Windows Azure</a></td>
+		<td><a href="https://www.infoq.com/presentations/continuous-delivery-azure">Continuous Delivery with Windows Azure</a></td>
 	</tr>
 	<tr>
 		<td>AngleBrackets 2013</td>
-		<td><a href="http://lanyrd.com/2013/anglebrackets/">WebMatrix 3 - Code Editor for the Cloud</a></td>
+		<td><a href="https://lanyrd.com/2013/anglebrackets/">WebMatrix 3 - Code Editor for the Cloud</a></td>
 	</tr>
 	<tr>
 		<td>Microsoft Build 2012</td>
-		<td><a href="http://channel9.msdn.com/Events/Build/2012/4-002">Continuous Integration with Windows Azure Websites</a></td>
+		<td><a href="https://channel9.msdn.com/Events/Build/2012/4-002">Continuous Integration with Windows Azure Websites</a></td>
 	</tr>
 	<tr>
 		<td>WordCamp NYC 2012</td>
-		<td><a href="http://2012.nyc.wordcamp.org/">WebMatrix 2: Uber geek in designer clothes</a></td>
+		<td><a href="https://2012.nyc.wordcamp.org/">WebMatrix 2: Uber geek in designer clothes</a></td>
 	</tr>
 	<tr>
 		<td>Channel 9</td>
-		<td><a href="http://channel9.msdn.com/Shows/Web+Camps+TV/Coding-Nodejs-in-WebMatrix-2">Coding Node.js in WebMatrix 2</a></td>
+		<td><a href="https://channel9.msdn.com/Shows/Web+Camps+TV/Coding-Nodejs-in-WebMatrix-2">Coding Node.js in WebMatrix 2</a></td>
 	</tr>
 	<tr>
 		<td>Channel 9</td>
-		<td><a href="http://channel9.msdn.com/Shows/Web+Camps+TV/WebcampsTV-Justin-and-Vishal-Build-an-Image-sharing-Site-with-Windows-Azure-Web-Sites">Justin and Vishal Build an Image-sharing Site with Windows Azure Web Sites</a></td>
+		<td><a href="https://channel9.msdn.com/Shows/Web+Camps+TV/WebcampsTV-Justin-and-Vishal-Build-an-Image-sharing-Site-with-Windows-Azure-Web-Sites">Justin and Vishal Build an Image-sharing Site with Windows Azure Web Sites</a></td>
 	</tr>
 	<tr>
 		<td>Streaming Media East 2009</td>
-		<td><a href="http://www.streamingmedia.com/conferences/East2009/speakers.aspx?speaker=JustinBeckwith">Making Effective Online Video for Education</a></td>
+		<td><a href="https://www.streamingmedia.com/conferences/East2009/speakers.aspx?speaker=JustinBeckwith">Making Effective Online Video for Education</a></td>
 	</tr>
 </table>
 
