fix: improve lighthouse score

--- a/archive.html
+++ b/archive.html
@@ -8,6 +8,8 @@ published: true
 permalink: /archive/
 ---
 
+<meta name="Description" content="A list of articles from Justin Beckwith's blog, broken down by category.">
+
 <div id="home">
 	<h1>The Archive</h1>
 	<div class="hrbar">&nbsp;</div>
@@ -34,5 +36,5 @@ permalink: /archive/
 			</div>
 		{% endfor %}
 	</div>
-	
+
 </div>
