fix: add rel noopener

--- a/_posts/2010-12-22-virtual-labs.html
+++ b/_posts/2010-12-22-virtual-labs.html
@@ -54,4 +54,4 @@ After the author has placed all of the machines in the desired start state, you 
 
 Upon completion of these steps, the lab can be made available to students.
 
-For more information, visit <a title="Virtual Labs" href="http://vte.cert.org/labs/" target="_blank">http://vte.cert.org/labs/</a>.
+For more information, visit <a title="Virtual Labs" href="http://vte.cert.org/labs/" target="_blank" rel="noopener">http://vte.cert.org/labs/</a>.
