--- a/_posts/2010-12-13-virtual-training-environment.html
+++ b/_posts/2010-12-13-virtual-training-environment.html
@@ -9,9 +9,9 @@ tags:
 status: publish
 type: post
 published: true
-excerpt: The Virtual Training Environment (VTE) is a Learning Management System designed at the Software Engineering Institute of Carnegie Mellon University.  This system is designed to provide students and instructors with a self managed ecosystem, including user generated content and aspects of social networking.  It may be used for independent learners, synchronous instruction, or semi-synchronous instruction.  Courses may be built using SCORM content, RECast presentations, podcasts, demos, quizzes, surveys, assignments, or virtual labs. 
+excerpt: The Virtual Training Environment (VTE) is a Learning Management System designed at the Software Engineering Institute of Carnegie Mellon University.  This system is designed to provide students and instructors with a self managed ecosystem, including user generated content and aspects of social networking.  It may be used for independent learners, synchronous instruction, or semi-synchronous instruction.  Courses may be built using SCORM content, RECast presentations, podcasts, demos, quizzes, surveys, assignments, or virtual labs.
 ---
-The Virtual Training Environment (VTE) is a Learning Management System designed at the Software Engineering Institute of Carnegie Mellon University.  This system is designed to provide students and instructors with a self managed ecosystem, including user generated content and aspects of social networking.  It may be used for independent learners, synchronous instruction, or semi-synchronous instruction.  Courses may be built using SCORM content, RECast presentations, podcasts, demos, quizzes, surveys, assignments, or virtual labs.  
+The Virtual Training Environment (VTE) is a Learning Management System designed at the Software Engineering Institute of Carnegie Mellon University.  This system is designed to provide students and instructors with a self managed ecosystem, including user generated content and aspects of social networking.  It may be used for independent learners, synchronous instruction, or semi-synchronous instruction.  Courses may be built using SCORM content, RECast presentations, podcasts, demos, quizzes, surveys, assignments, or virtual labs.
 
 
 
@@ -29,4 +29,4 @@ I am going to do a detailed writeup on this system in the future, but until our 
 
 
 
-For more information, visit <a title="VTE" href="http://vte.cert.org/lms/" target="_blank">http://vte.cert.org/lms/</a>
+For more information, visit <a title="VTE" href="http://vte.cert.org/lms/" target="_blank" rel="noopener">http://vte.cert.org/lms/</a>
